[package]
name = "amd_uprof"
version = "0.1.2"
edition = "2024"

authors = ["vdrn <valinion@gmail.com>"]
license = "Unlicense"
description = "Safe wrappers for amd_uprof-sys"
homepage = "https://github.com/vdrn/amd_uprof"
repository = "https://github.com/vdrn/amd_uprof"
readme = "readme.md"
keywords = ["amd", "uprof", "profiling"]

[features]
nightly = []
default = []

[dependencies]
amd_uprof-sys = { version = "0.1" }
